# catalogus

./: .gitignore  Jenkinsfile  Readme.md  docker-compose.yml
solr/: Dockerfile  docker-entrypoint.sh
web/: Dockerfile
web/ckan/: config.ini  development.ini  docker-entrypoint.sh  jetty
web/ckanext-dcatAmsterdam/: MANIFEST.in  README.md  setup.cfg  setup.py
web/ckanext-dcatAmsterdam/ckanext/dcatAmsterdam/: converters_validators.py  helpers.py  plugin.py
web/ckanext-dcatAmsterdam/ckanext/dcatAmsterdam/i18n/: ckanext-dcatAmsterdam.pot
web/ckanext-dcatAmsterdam/ckanext/dcatAmsterdam/i18n/nl/LC_MESSAGES/: ckanext-dcatAmsterdam.mo  ckanext-dcatAmsterdam.po
web/ckanext-dcatAmsterdam/ckanext/dcatAmsterdam/templates/package/snippets/: additional_info.html  package_metadata_fields.html  resource_form.html
web/ckanext-dcatAmsterdam/ckanext/dcatAmsterdam/templates/snippets/: package_item.html
web/ckanext-iauthfunctions/: README.rst  requirements.txt  setup.py
web/ckanext-iauthfunctions/ckanext/iauthfunctions/: plugin.py
web/ckanext-privatedatasets/: setup.cfg  setup.py
web/ckanext-privatedatasets/ckanext/privatedatasets/: auth.py  helpers.py  plugin.py
web/ckanext-privatedatasets/ckanext/privatedatasets/i18n/nl/LC_MESSAGES/: ckanext-privatedatasets.po
web/ckanext-privatedatasets/ckanext/privatedatasets/templates/package/: read.html  search.html
web/ckanext-privatedatasets/ckanext/privatedatasets/templates/package/snippets/: additional_info.html  package_basic_fields.html  package_metadata_fields.html
web/ckanext-privatedatasets/ckanext/privatedatasets/templates/snippets/: package_item.html  popular.html
