[metadata]
description-file = README.md

[nosetests]
ckan=1
with-pylons=test.ini
with-xunit=1
with-coverage=1
cover-package=ckanext.dcatAmsterdam
cover-inclusive=1
cover-erase=1
cover-xml=1

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/dcatAmsterdam/i18n/ckanext-dcatAmsterdam.pot
width = 80

[init_catalog]
domain = ckanext-dcatAmsterdam
input_file = ckanext/dcatAmsterdam/i18n/ckanext-dcatAmsterdam.pot
output_dir = ckanext/dcatAmsterdam/i18n

[update_catalog]
domain = ckanext-dcatAmsterdam
input_file = ckanext/dcatAmsterdam/i18n/ckanext-dcatAmsterdam.pot
output_dir = ckanext/dcatAmsterdam/i18n

[compile_catalog]
domain = ckanext-dcatAmsterdam
directory = ckanext/dcatAmsterdam/i18n
statistics = true