[metadata]
description-file = README.md

[nosetests]
ckan=1
with-pylons=test.ini
with-xunit=1
with-coverage=1
cover-package=ckanext.privatedatasets
cover-inclusive=1
cover-erase=1
cover-xml=1

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/privatedatasets/i18n/ckanext-privatedatasets.pot
width = 80

[init_catalog]
domain = ckanext-privatedatasets
input_file = ckanext/privatedatasets/i18n/ckanext-privatedatasets.pot
output_dir = ckanext/privatedatasets/i18n

[update_catalog]
domain = ckanext-privatedatasets
input_file = ckanext/privatedatasets/i18n/ckanext-privatedatasets.pot
output_dir = ckanext/privatedatasets/i18n

[compile_catalog]
domain = ckanext-privatedatasets
directory = ckanext/privatedatasets/i18n
statistics = true